--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,11 @@
     box-shadow: 0px 1px 2px #36486b;
 }
 
+.card-img-top {
+  height: 300px;
+  width: 200px;
+}
+
 @media screen and (max-width: 768px) {
     body {
       background-color: #333;
